package model;

public interface Internet {
    void connectTo(String serverhost) throws Exception;
}
